--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,7 @@ body {
   width: 100%;
   max-width: 320px;
   height: 80vh;
-  background: url(/src/imgs/buildings.png) no-repeat center;
+  background: url(/src/imgs/building.png) no-repeat center;
   background-size: cover;
   border-radius: 10px;
   box-shadow: 8px 2px 8px 0;
